# cat-toy

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
